# brainfuck_toolchain

./: CMakeLists.txt  README.md  aot_llvm.cpp  compiler_x86_64.cpp  inter_cpp.cpp  interpreter.py  jit_compiler.cpp  profiling_output.txt  runassembler.sh  runinterpreter.sh  runllvm.sh  runoptimizer.sh  test.bf  writeup.txt
bftest/: assembly_output.s  bfcheck.pl  bfi  out  wrapper
timing_results/: all_results_baseline.time  all_results_with_loop.time  all_results_with_loop_and_scan.time  all_results_with_scan.time
timing_results_jit/: all_results_aot_baseline.time  all_results_jit_baseline.time  all_results_llvm_baseline.time
timing_results_llvm/: 00.time  02.time  03.time  AOT_time.time  all_results_llvm_baseline.time
